2024-02-02T16:17:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7758619551 # 80
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 851 1553 / 868 1585
* notice: next accum: outdated-unq outdated-all / unq all: 852 1555 / 868 1586
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-19] / [2024-02-02]

2024-02-02T08:18:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7753213327 # 79
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 851 1553 / 867 1584
* notice: next accum: outdated-unq outdated-all / unq all: 851 1553 / 868 1585
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-19 2024-02-02]

2024-02-01T16:18:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7744315064 # 77
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 850 1551 / 867 1583
* notice: next accum: outdated-unq outdated-all / unq all: 851 1553 / 867 1584
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-18] / [2024-02-01]

2024-02-01T08:18:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7738206049 # 76