@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-02T16:17:04Z",
+  "timestamp" : "2024-02-03T08:17:30Z",
   "count_outdated" : 1555,
   "uniques_outdated" : 852,
-  "count" : 1586,
-  "uniques" : 868,
+  "count" : 1587,
+  "uniques" : 869,
   "clones" : [
     {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
